Did a ton of reformatting and updating. Added UserMenu.java to AndroidManifest.xml to fix login error. Added google-services.json for the time being, apparently it is non-secret/somewhat safe to make public (we can change this later). Fixed some styling for login/signup. Updated Gradle to 8.3.0. Update .gitignore. TODO: Remove username stuff, it seems firebase just handles emails? Probably should rename from com.example.expensetracker too.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,10 @@
             android:name=".SignUpActivity"
             android:label="@string/app_name">
         </activity>
+        <activity
+            android:name=".UserMenu"
+            android:label="@string/app_name">
+        </activity>
     </application>
 
 </manifest>
