--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-tasks:18.1.0'
     implementation 'androidx.navigation:navigation-runtime:2.7.7'
     implementation 'com.google.firebase:firebase-auth:22.3.1'
+    implementation 'com.github.PhilJay:MPAndroidChart:3.1.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
@@ -51,6 +52,5 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:32.7.4')
 
     implementation("com.google.firebase:firebase-analytics")
-
 
 }
