--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,5 +52,6 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:32.7.4')
 
     implementation("com.google.firebase:firebase-analytics")
+    implementation 'com.google.android.material:material:1.11.0'
 
 }
